# Jate-lang

./: Cargo.toml  README.md
.github/workflows/: rust.yml
compiler/jate/: Cargo.toml
compiler/jate/src/: main.rs
compiler/jate_ast/: Cargo.toml
compiler/jate_ast/src/: expr.rs  lib.rs  stmt.rs
compiler/jate_ast_ir/: Cargo.toml
compiler/jate_ast_ir/src/: lib.rs
compiler/jate_driver/: Cargo.toml
compiler/jate_driver/src/: args.rs  lib.rs
compiler/jate_error/: Cargo.toml
compiler/jate_error/src/: lib.rs
compiler/jate_error_codes/: Cargo.toml
compiler/jate_error_codes/errors/: E0001.md  E0002.md  E0003.md  E0004.md  E0005.md  E0006.md  E0007.md  E0008.md  E0009.md  E0010.md
compiler/jate_error_codes/src/: lib.rs
compiler/jate_lexer/: Cargo.toml
compiler/jate_lexer/src/: lexer.rs  lib.rs  token.rs
compiler/jate_lexer/tests/: all_tokens.rs
compiler/jate_parser/: Cargo.toml
compiler/jate_parser/src/: keyword.rs  lib.rs  parser.rs  tests.rs  token_stream.rs
compiler/jate_session/: Cargo.toml
compiler/jate_session/src/: lib.rs  source.rs
docs/syntax/: general_example.md
